[gd_scene load_steps=4 format=3 uid="uid://dq3uthakjtpoo"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_qdayt"]
[ext_resource type="Texture2D" uid="uid://dcjdxeiqhg14c" path="res://icon.svg" id="1_u3fjw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fpu12"]
size = Vector2(120, 120)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.125, 0.125)
script = ExtResource("1_qdayt")

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_u3fjw")

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fpu12")

[node name="PlayerAnimation" type="AnimationPlayer" parent="."]

[node name="PlayerRayCast" type="RayCast2D" parent="."]
target_position = Vector2(0, 70)

[node name="LedgeGrabber" type="RayCast2D" parent="."]
modulate = Color(0, 0.501961, 0, 1)
target_position = Vector2(80, 0)

[node name="PlayerTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true
